Run a few easy IDEA inspections and cleanups